# ChangeLog for dev-util/kdevelop
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdevelop/ChangeLog,v 1.172 2009/03/01 12:10:39 tampakrap Exp $

  01 Mar 2009; Theo Chatzimichos <tampakrap@gentoo.org>
  kdevelop-3.9.91.ebuild:
  find kdevplatform version with versionator

*kdevelop-3.9.91 (01 Mar 2009)

  01 Mar 2009; Theo Chatzimichos <tampakrap@gentoo.org> metadata.xml,
  +kdevelop-3.9.91.ebuild:
  Add KDevelop4 Beta to the tree

*kdevelop-3.5.4 (05 Jan 2009)

  05 Jan 2009; Patrick Lauer <patrick@gentoo.org> +kdevelop-3.5.4.ebuild:
  Bump to 3.5.4, fixes #253369. SRC_URI now pulls from kde mirrors.

  04 Sep 2008; Jeroen Roovers <jer@gentoo.org> kdevelop-3.5.2-r1.ebuild:
  Stable for HPPA too.

*kdevelop-3.5.3 (02 Sep 2008)

  02 Sep 2008; Tobias Heinlein <keytoaster@gentoo.org>
  +kdevelop-3.5.3.ebuild:
  Version bump.

  02 Aug 2008; Jeroen Roovers <jer@gentoo.org> kdevelop-3.5.2-r1.ebuild:
  Marked ~hppa too.

  02 Jul 2008; Brent Baude <ranger@gentoo.org> kdevelop-3.5.2-r1.ebuild:
  stable ppc, bug 230121

  01 Jul 2008; Raúl Porcel <armin76@gentoo.org> kdevelop-3.5.2-r1.ebuild:
  sparc/x86 stable wrt #230120

  01 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  kdevelop-3.5.2-r1.ebuild:
  stable amd64, bug 230121

  30 Jun 2008; Brent Baude <ranger@gentoo.org> kdevelop-3.5.2-r1.ebuild:
  stable ppc64, bug 230121

*kdevelop-3.5.2-r1 (23 Jun 2008)

  23 Jun 2008; Carsten Lohrke <carlo@gentoo.org> +kdevelop-3.5.2-r1.ebuild:
  Sync to branch, fixes linking and desktop entry standard comliance issues.

*kdevelop-3.5.2 (19 May 2008)

  19 May 2008; Carsten Lohrke <carlo@gentoo.org> +kdevelop-3.5.2.ebuild:
  Version bump.

  19 Mar 2008; Bo Ørsted Andresen <zlin@gentoo.org> kdevelop-3.5.1.ebuild:
  Fix SRC_URI.

*kdevelop-3.5.1 (18 Mar 2008)

  18 Mar 2008; Bo Ørsted Andresen <zlin@gentoo.org>
  -files/kdevelop-3.4.1-hang-fix.diff,