@@ -1,12 +1,12 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdevelop/Attic/kdevelop-3.9.91.ebuild,v 1.2 2009/03/01 12:10:39 tampakrap Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdevelop/Attic/kdevelop-3.9.91.ebuild,v 1.3 2009/03/26 20:18:10 scarabeus Exp $
 
 EAPI="2"
 
 inherit kde4-base versionator
 
-KDEVPLATFORM_P="kdevplatform-`expr $(get_major_version) - 3`.$(get_after_major_version)"
+KDEVPLATFORM_P="kdevplatform-$(($(get_major_version)-3)).$(get_after_major_version)"
 DESCRIPTION="Integrated Development Environment for Unix, supporting KDE/Qt, C/C++ and many other languages."
 HOMEPAGE="http://www.kde.org/"
 SRC_URI="mirror://kde/unstable/${PN}/${PV}/src/${P}.tar.bz2"
