@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/kdevplatform
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdevplatform/ChangeLog,v 1.3 2009/03/25 09:31:05 tampakrap Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdevplatform/ChangeLog,v 1.4 2009/03/26 20:20:25 scarabeus Exp $
+
+  26 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org>
+  kdevplatform-0.9.91.ebuild:
+  Dont call external stuff in global scope.
 
   25 Mar 2009; Theo Chatzimichos <tampakrap@gentoo.org>
   kdevplatform-0.9.91.ebuild:
