@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/kdevelop
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdevelop/ChangeLog,v 1.172 2009/03/01 12:10:39 tampakrap Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/kdevelop/ChangeLog,v 1.173 2009/03/26 20:18:10 scarabeus Exp $
+
+  26 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org> kdevelop-3.9.91.ebuild:
+  Dont call external stuff in global scope.
 
   01 Mar 2009; Theo Chatzimichos <tampakrap@gentoo.org>
   kdevelop-3.9.91.ebuild:
